[gd_scene load_steps=5 format=3 uid="uid://dbuo380y7olnq"]

[ext_resource type="Script" uid="uid://cqul25inxog7u" path="res://ui/ui.gd" id="1_wexb5"]
[ext_resource type="Script" uid="uid://bcoc3jlisr6dn" path="res://ui/template_debug.gd" id="3_5yis2"]
[ext_resource type="Theme" uid="uid://qrw5h14vf5pu" path="res://ui/simple_dark.tres" id="3_dydw8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vaojm"]
bg_color = Color(0.0823529, 0.0823529, 0.101961, 0.235294)

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_wexb5")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("3_dydw8")

[node name="Debug" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 185.0
offset_right = 280.0
offset_bottom = 75.0
grow_horizontal = 0
size_flags_horizontal = 0
theme = ExtResource("3_dydw8")
theme_override_styles/panel = SubResource("StyleBoxFlat_vaojm")

[node name="Label" type="Label" parent="Control/Debug"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "debug"
autowrap_mode = 1
text_overrun_behavior = 3

[node name="Menu" type="Panel" parent="Control"]
layout_mode = 0
offset_right = 94.0
offset_bottom = 180.0

[node name="MarginContainer" type="MarginContainer" parent="Control/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="MainMenu" type="Control" parent="Control/Menu/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Menu/MarginContainer/MainMenu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 103.0
grow_horizontal = 2
theme_override_constants/separation = 1
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Control/Menu/MarginContainer/MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="Control/Menu/MarginContainer/MainMenu/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Space Freight"
horizontal_alignment = 1

[node name="Play" type="Button" parent="Control/Menu/MarginContainer/MainMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Play"
alignment = 0

[node name="Settings" type="Button" parent="Control/Menu/MarginContainer/MainMenu/VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Settings"
alignment = 0

[node name="Quit" type="Button" parent="Control/Menu/MarginContainer/MainMenu/VBoxContainer"]
layout_mode = 2
text = "Quit"
alignment = 0

[node name="PauseMenu" type="Control" parent="Control/Menu/MarginContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Menu/MarginContainer/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 1

[node name="Label" type="Label" parent="Control/Menu/MarginContainer/PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Paused"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="Control/Menu/MarginContainer/PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Resume"
alignment = 0

[node name="Menu" type="Button" parent="Control/Menu/MarginContainer/PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Menu"
alignment = 0

[node name="Settings" type="Button" parent="Control/Menu/MarginContainer/PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
toggle_mode = true
text = "Settings"
alignment = 0

[node name="Quit" type="Button" parent="Control/Menu/MarginContainer/PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit"
alignment = 0

[node name="Settings" type="Panel" parent="Control"]
visible = false
layout_mode = 0
offset_left = 320.0
offset_right = 546.0
offset_bottom = 180.0

[node name="MarginContainer" type="MarginContainer" parent="Control/Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Settings/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Left" type="VBoxContainer" parent="Control/Settings/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FastMenu" type="CheckButton" parent="Control/Settings/MarginContainer/VBoxContainer/HBoxContainer/Left"]
layout_mode = 2
text = "Fast Menus:"

[node name="DebugMode" type="CheckButton" parent="Control/Settings/MarginContainer/VBoxContainer/HBoxContainer/Left"]
layout_mode = 2
text = "Debug Mode:"

[node name="Right" type="VBoxContainer" parent="Control/Settings/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TemplateDebug" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("3_dydw8")
script = ExtResource("3_5yis2")

[node name="Panel" type="Panel" parent="TemplateDebug"]
layout_mode = 0
offset_left = 94.0
offset_top = 140.0
offset_right = 254.0
offset_bottom = 180.0

[node name="MarginContainer" type="MarginContainer" parent="TemplateDebug/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Button" type="Button" parent="TemplateDebug/Panel/MarginContainer"]
layout_mode = 2
text = "slide_out"

[connection signal="pressed" from="Control/Menu/MarginContainer/MainMenu/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Control/Menu/MarginContainer/MainMenu/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Control/Menu/MarginContainer/MainMenu/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Control/Menu/MarginContainer/PauseMenu/VBoxContainer/Resume" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Control/Menu/MarginContainer/PauseMenu/VBoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Control/Menu/MarginContainer/PauseMenu/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Control/Menu/MarginContainer/PauseMenu/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="toggled" from="Control/Settings/MarginContainer/VBoxContainer/HBoxContainer/Left/FastMenu" to="." method="_on_fast_menu_toggled"]
[connection signal="toggled" from="Control/Settings/MarginContainer/VBoxContainer/HBoxContainer/Left/DebugMode" to="." method="_on_debug_mode_toggled"]
[connection signal="pressed" from="TemplateDebug/Panel/MarginContainer/Button" to="TemplateDebug" method="_on_button_pressed"]
